--- a/vercel.json
+++ b/vercel.json
@@ -4,13 +4,7 @@
     { "src": "src/**/*", "use": "@vercel/static" }
   ],
   "routes": [
-    {
-      "src": "/",
-      "dest": "/pages/index.html"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/$1"
-    }
+    { "src": "/", "dest": "/pages/index.html" },
+    { "src": "/(.*)", "dest": "/$1" }
   ]
 }
