--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,8 @@
 {
-  "version": 2,
   "builds": [
-    { "src": "src/**/*", "use": "@vercel/static" }
+    { "src": "src/pages/**/*.html", "use": "@vercel/static" }
   ],
   "routes": [
-    { "src": "/", "dest": "/pages/index.html" },
-    { "src": "/(.*)", "dest": "/$1" }
+    { "src": "/(.*)", "dest": "src/pages/$1" }
   ]
 }
