--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,7 @@
     { "src": "src/pages/**/*.html", "use": "@vercel/static" }
   ],
   "routes": [
+    { "src": "/?", "dest": "src/pages/index.html" },
     { "src": "/(.*)", "dest": "src/pages/$1" }
   ]
 }
