--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,9 @@
     { "src": "src/pages/**/*.html", "use": "@vercel/static" }
   ],
   "routes": [
-    { "src": "/?", "dest": "src/pages/index.html" },
-    { "src": "/(.*)", "dest": "src/pages/$1" }
+    { "src": "/css/(.*)", "dest": "/src/css/$1" },
+    { "src": "/js/(.*)", "dest": "/src/js/$1" },
+    { "src": "/components/(.*)", "dest": "/src/components/$1" },
+    { "src": "/pages/(.*)", "dest": "/src/pages/$1" }
   ]
 }
