--- a/vercel.json
+++ b/vercel.json
@@ -1,28 +1,15 @@
 {
-  "version": 2,
-  "name": "Rawnaq",
+  "version": 3,
   "builds": [
     {
-      "src": "pages/**/*.html",
-      "use": "@vercel/static"
-    },
-    {
-      "src": "css/**/*.css",
-      "use": "@vercel/static"
-    },
-    {
-      "src": "js/**/*.js",
-      "use": "@vercel/static"
-    },
-    {
-      "src": "components/**/*.html",
+      "src": "public/**/*",
       "use": "@vercel/static"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/pages/$1"
+      "dest": "/public/$1"
     }
   ]
 }
